# TrinityCore

dep/: CMakeLists.txt  PackageList.txt
dep/libuv/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Main.cpp
src/server/authserver/PrecompiledHeaders/: authPCH.h
src/server/authserver/Server/: AuthSocket.cpp  AuthSocket.h  AuthSocketMgr.h
src/server/game/: CMakeLists.txt
src/server/game/Server/: WorldSession.cpp  WorldSession.h  WorldSocket.cpp  WorldSocket.h  WorldSocketMgr.cpp  WorldSocketMgr.h
src/server/game/Server/Protocol/: PacketLog.cpp  PacketLog.h
src/server/shared/: CMakeLists.txt
src/server/shared/Networking/: Socket.h  SocketMgr.h
src/server/worldserver/: CMakeLists.txt  Main.cpp
